<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:id="@+id/howtosixpattipopup">


    <ImageView
        android:id="@+id/closesixpattihelp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/cross"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="6 PATTI"
            android:textColor="@color/colorYellow"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Instructions to play"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstpoint"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="• Set Buy-in"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorYellow"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play1"
                    android:textColor="@color/colorWhite"/>

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="230dp"
                    android:src="@drawable/how_to_play_sixpatti"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play2"
                    android:textColor="@color/colorWhite"/>

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="230dp"
                    android:src="@drawable/how_to_play_sixpatti"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="IN GAME PLAY"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorYellow"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play3"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play3_1"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="5dp"/>



                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="230dp"
                    android:src="@drawable/how_to_play_sixpatti"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play4"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play4_1"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play4_2"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play4_3"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="5dp"/>


                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="230dp"
                    android:src="@drawable/how_to_play_sixpatti"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play5"
                    android:textColor="@color/colorWhite"/>

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="230dp"
                    android:src="@drawable/how_to_play_sixpatti"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play6"
                    android:textColor="@color/colorWhite"/>
                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="230dp"
                    android:src="@drawable/how_to_play_sixpatti"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play7"
                    android:textColor="@color/colorWhite"/>

                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="230dp"
                    android:src="@drawable/how_to_play_sixpatti"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play8"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play9"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play9_1"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="5dp"
                    android:textStyle="italic"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ranking of hands (From high to low)"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorYellow"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play10"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play11"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play12"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play13"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play14"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play15"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_play16"
                    android:textStyle="italic"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</RelativeLayout>