<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#b3000000">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/close"
            android:textColor="@color/darkbrown"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textStyle="bold"
        />

        <TextView
            android:id="@+id/backtolobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/backtolobby"
            android:textColor="@color/darkbrown"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:layout_below="@+id/close"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/standup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/standup"
            android:textColor="@color/darkbrown"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:layout_below="@+id/backtolobby"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/nxtround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/nxtround"
            android:textColor="@color/darkbrown"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:layout_below="@+id/standup"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/switchtble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/switchtble"
            android:textColor="@color/darkbrown"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:layout_below="@+id/nxtround"
            android:textStyle="bold"
            />
    </RelativeLayout>
</RelativeLayout>